# FSeq

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  fseq.c  fseq.h  fseqCreateRandom.c  fseqTest.c  fseqls.c  gcov.sh  sonar-project.properties
.github/workflows/: ci-workflow.yml
